2009-11-12  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Do not show the QWidget when the WebCore::Widget is hidden
        https://bugs.webkit.org/show_bug.cgi?id=31203

        The clipping code was making a QWidget visible even if the
        WebCore::Widget was hidden. Fix the bug by calling setVisible
        only if the WebCore::Widget Widget::isSelfVisible.

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::QtPluginWidget::show): Override WebCore::Widget::show to call handleVisibility
        (WebCore::QtPluginWidget::handleVisibility): New method to call setVisible when we are visible
        (FrameLoaderClientQt::createPlugin): Hide the QWidget by default

2009-11-23  David Boddie  <dboddie@trolltech.com>

        Reviewed by Simon Hausmann.

        Updated the QWebElement documentation with links to examples and
        external resources.
        Fixed the project file for the webelement snippet and tidied up the
        markers used for quoting the code.

        * Api/qwebelement.cpp:
        * docs/webkitsnippets/webelement/main.cpp:
        (findAll):
        * docs/webkitsnippets/webelement/webelement.pro:

2009-11-23  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Wrong runtime instance objects of wrapped QObjects may be used if
        the wrapped object died before the gc removed the instance.

        https://bugs.webkit.org/show_bug.cgi?id=31681

        Added a unit-test to verify that wrapping a QObject with the
        same identity as a previously but now dead object works.

        * tests/qwebframe/tst_qwebframe.cpp:

2009-11-19  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Add instantiation tests for QWebInspector.

        * tests/qwebinspector/qwebinspector.pro: Added.
        * tests/qwebinspector/tst_qwebinspector.cpp: Added.